--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,9 @@
  <div class="container parent-container">
     <div class="row justity-content-center">
-        <h1> Eat da Burgers !!</h1>
+        <h1 class="title"> <span id="eat">Eat </span> da <span id="Burgers"> Burgers</span> !!</h1>
     </div>
     <div class="row justify-content-center">
-        <h2> Please Enter what you'd like to order</h2>
+        <h3 class="placedOrder"> Please Enter what you'd like to order</h3>
         <form class="order-form justify-content-center input-group">
             <label for = "burger_name"></label>
             <input type="text" id="newbuger" placeholder="chicken schnitzel burger">
