--- a/views/partials/burgers/devoured.handlebars
+++ b/views/partials/burgers/devoured.handlebars
@@ -1,7 +1,7 @@
 <li class="devoured-burger{{this.id}}">
   {{this.burger_name}}
 
-  <button class="delete-btn" data-id="{{this.id}}" data-devoured="{{this.devoured}}">
+  <button class="delete-btn btn" data-id="{{this.id}}" data-devoured="{{this.devoured}}">
     {{#if devoured}}{{else}}Delete{{/if}}
   </button>
 
