--- a/views/partials/burgers/notyet-devoured.handlebars
+++ b/views/partials/burgers/notyet-devoured.handlebars
@@ -1,7 +1,7 @@
 <li>
   {{this.burger_name}}
 
-  <button class="devoured-btn" data-id="{{this.id}}" data-devoured="{{this.devoured}}">
+  <button class="devoured-btn btn" data-id="{{this.id}}" data-devoured="{{this.devoured}}">
     {{#if devoured}}Devour{{else}}{{/if}}
   </button>
 
