--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" 
     crossorigin="anonymous"></script>
-  <link rel="stylesheet" type="text/css" href="/assets/style.css">
+    <link rel="stylesheet"  href="/assets/style.css">
 </head>
 <body>
     {{{ body }}}
